css/styles.css
@charset "UTF-8";
/* CSS Document */

@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);


div#shake{
	display:none;
	background-color:rgba(0,0,0,0.8);
	background-size: cover;
	height:100%;
	width:100%;
	position:absolute;
	top:0;
	left:0;
}

a:link, a:visited {
  color:#E45E5E;
}

#opt-out {
  margin-bottom:20px
}

div#submitGood{
	display:none;
	background-color:rgba(0,0,0,0.8);
	background-size: cover;
	height:100%;
	width:100%;
	padding:33% 0 0 0;
	position:absolute;
	top:0;
	left:0;
	color:#fff;
	font-size:2.5em;
	text-align:center;
}

.header {
  background: url(img/header.jpg) center no-repeat;
  height:60px;
}

#honeypot {
  display:none;
}

#captchadiv{
  text-align:center;
	margin: 0 auto;
	padding: 0 0 30px 0;	
}

  @-webkit-keyframes steam
  {
  from {opacity: 0;}
  to {opacity: .9;}
  }

  @-webkit-keyframes jitter
  {
  from {margin-left: 0;}
  to {margin-left: 10px;}
  }

  @-moz-keyframes steam
  {
  from {opacity: 0;}
  to {opacity: .9;}
  }

  @-moz-keyframes jitter
  {
  from {margin-left: 0;}
  to {margin-left: 10px;}
  }
  @-ms-keyframes steam
  {
  from {opacity: 0;}
  to {opacity: .9;}
  }

  @-ms-keyframes jitter
  {
  from {margin-left: 0;}
  to {margin-left: 10px;}
  }

  @-o-keyframes steam
  {
  from {opacity: 0;}
  to {opacity: .9;}
  }

  @-o-keyframes jitter
  {
  from {margin-left: 0;}
  to {margin-left: 10px;}
  }
  
  @-webkit-keyframes steam
  {
  from {opacity: 0;}
  to {opacity: .9;}
  }


  @-webkit-keyframes cooked
  {
  from {background: #f0b4a8;}
  to {background: #9E4E12;}
  }

  @-moz-keyframes cooked
  {
  from {background: #f0b4a8;}
  to {background: #9E4E12;}
  }

  @-ms-keyframes cooked
  {
  from {background: #f0b4a8;}
  to {background: #9E4E12;}
  }

  @-o-keyframes cooked
  {
  from {background: #f0b4a8;}
  to {background: #9E4E12;}
  }
  

body {
  background:#222;
  position:relative;
}

.chicken-wrap {
  width: 150px;
height: 200px;
position:absolute;
left:40%;
top:50%;
margin-top:-200px;
    margin-left:0;
  
  -webkit-transition: -webkit-animation;
  -moz-transition: -webkit-animation;
  -ms-transition: -webkit-animation;
  -o-transition: -webkit-animation;
  transition: -webkit-animation;
  
  
  
  -webkit-animation: jitter .1s linear 24 alternate;
  -moz-animation: jitter .1s linear 24 alternate;
  -ms-animation: jitter .1s linear 24 alternate;
  -o-animation: jitter .1s linear 24 alternate;
}

.sizzle {
  color:white;
  opacity:0;
  font-size:9em;
  line-height:.6;
  
  -webkit-transform:rotate(90deg);
  -moz-transform:rotate(90deg);
  -ms-transform:rotate(90deg);
  -o-transform:rotate(90deg);
  transform:rotate(90deg);
  
  width:40px;
  display:inline-block;

}



.chicken-wrap:hover {
  
}

.chicken-wrap .sizzle {
  -webkit-animation:  none;
  -webkit-transition: -webkit-animation;
  
  -moz-animation:  none;
  -moz-transition: -moz-animation;
  
  -ms-animation:  none;
  -ms-transition: -ms-animation;
  
  -o-animation:  none;
  -o-transition: -o-animation;
  
  -webkit-animation: steam 1s linear infinite alternate;
  -moz-animation: steam 1s linear infinite alternate;
  -ms-animation: steam 1s linear infinite alternate;
  -o-animation: steam 1s linear infinite alternate;
}

.chicken-wrap:hover .sizzle {
  
}

.shine {
  display:block;
  position:absolute;
  bottom:30px;
  opacity:.7;
  right:10px;
   width:30px;
/* width has to be 70% of height */
/* could use width:70%; in a square container */
   height:100px;
   background-color:#fff;

   -webkit-border-radius:63px 63px 63px 63px/
   108px 108px 72px 72px;
     -moz-border-radius:63px 63px 63px 63px/
   108px 108px 72px 72px;
     -ms-border-radius:63px 63px 63px 63px/
   108px 108px 72px 72px;
     -o-border-radius:63px 63px 63px 63px/
   108px 108px 72px 72px;
   
   border-radius:50% 50% 50% 50%/60% 60% 40% 40%;
  z-index:2;
}

.bone {
  display:block;
  position:relative;
  width:25px;
  height:60px;
  background:#fff;
  -webkit-transform:rotate(-130deg);
  -moz-transform:rotate(-130deg);
  -ms-transform:rotate(-130deg);
  -o-transform:rotate(-130deg);
  transform:rotate(-130deg);
  top:-55px;
  left:-25px;
}

.bone:before, .bone:after {
  content: '';
  display:block;
  position:relative;
  width:30px;
  height:30px;
  background:#fff;
  border-radius:50%;
  top:-20px;
  left:5px;
}

.bone:after {
   top:-50px;
   left:-10px; 
}

.chicken {
  cursor:pointer;
   display:block;
  position:relative;
   width:126px; 
   -webkit-transform: rotate(-130deg);
  -moz-transform: rotate(-130deg);
  -ms-transform: rotate(-130deg);
  -o-transform: rotate(-130deg);
  transform: rotate(-130deg);
/* width has to be 70% of height */
/* could use width:70%; in a square container */
   height:180px;

   -webkit-border-radius:63px 63px 63px 63px/
   108px 108px 72px 72px;
   
   border-radius:50% 50% 50% 50%/60% 60% 40% 40%;
  
  border:8px solid #222;
  z-index:1;

  
  -webkit-animation: cooked 2s linear 1;
  -moz-animation: cooked 2s linear 1;
  -ms-animation: cooked 2s linear 1;
  -o-animation: cooked 2s linear 1;
   
   background: #9E4E12;
}



body {
  /*background:url(http://thekitemap.com/images/feedback-img.jpg) no-repeat;
  background-size: cover;
  height:100%;*/
  background:#222;
  margin:20px;
}

#feedback-page{
	text-align:center;
}

#form-main{
}

.green {
  background:green;
}

#form-div {
  position:relative;
	background-color:#333;
  padding:20px;
  margin: 50px auto 0;
  -moz-border-radius: 7px;
  -webkit-border-radius: 7px;
  max-width: 500px;
  overflow: hidden;
  box-shadow: 4px 4px 0px #111;
border-left: 1px solid #666;
border-top: 1px solid #666;
}

#gyro-output {
  color:white;
  font-size:1.4em;
  clear:both;
  padding:20px;
}

#gyro-output span {
  font-size:1.1em;
  color:#666;
}

.feedback-input {
	color:#3c3c3c;
	font-family: Helvetica, Arial, sans-serif;
  font-weight:500;
	font-size: 18px;
	border-radius: 0;
	line-height: 22px;
	background-color: #fbfbfb;
	padding: 13px 13px 13px 54px;
	margin-bottom: 10px;
	width:100%;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
  border: 3px solid rgba(0,0,0,0);
}

.feedback-input:focus{
	background: #fff;
	box-shadow: 0;
	border: 3px solid #3498db;
	color: #3498db;
	outline: none;
  padding: 13px 13px 13px 54px;
}

.focused{
	color:#30aed6;
	border:#30aed6 solid 3px;
}

/* Icons ---------------------------------- */
#name, #email, #comment{
	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
	background-size: 30px 30px;
	background-position: 11px 8px;
	background-repeat: no-repeat;
    background-color: #eee;
  box-shadow: inset 4px 4px 0px #aaa;
  border: 0;
  border-right: 1px solid #efefef;
  border-bottom: 1px solid #efefef;
  
  -webkit-transition: background-color .2s;
  -moz-transition: background-color .2s;
  -ms-transition: background-color .2s;
  -o-transition: background-color .2s;
  transition: background-color .2s;
}

#name:focus, #email:focus, #comment:focus {
	background-color:#fff;
}

#email {
  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
}

#comment {
	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
}

textarea {
	width: 100%;
	height: 150px;
	line-height: 150%;
}

.button-blue {
	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
	float:left;
border: 1px solid #70B4E2;
cursor: pointer;
background-color: #3498db;
box-shadow: 0px 5px 0 #166194;
	color:white;
	font-size:20px;
  padding:10px 15px;
  font-weight:700;
  margin-top:0;
  margin-bottom:3px;
  
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
  -ms-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  
  -webkit-appearance:none;

}
/*.button-blue:hover {
  background-color: #45a9ec;
  
}*/

.button-blue:active, .button-blue:focus  {
  background-color: #2387ca;
  box-shadow: 0px 0px #3498db;
  margin-top:3px;
  margin-bottom:0px;
  outline:none;
}

#kill {
  display:block;
  background:red;
  margin:10px 0;
  color:white;
  padding:5px 10px;
  font-size:2em;
  float:left;
  text-decoration:none;
}

.modal {
  position: absolute;
  background: rgba(35,135,202,.9);
  top: 0;
  left:0;
  bottom: 0;
  width: 100%;
  text-align:center;
  display:none;
}

.message {
  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
  color:white;
  font-size: 18px;
  margin-top: 30%;
  text-shadow: 1px 1px 1px #0F4672;
}

/* LOADING ANIMATION */

#loading{
width:60px;
margin:0 auto;
}

.loading_blockG{
background-color:#BFDFF5;
border:1px solid #2387CA;
float:left;
height:43px;
margin-left:3px;
width:11px;
opacity:0.1;
-moz-animation-name:bounceG;
-moz-animation-duration:0.8s;
-moz-animation-iteration-count:infinite;
-moz-animation-direction:linear;
-moz-transform:scale(0.7);
-webkit-animation-name:bounceG;
-webkit-animation-duration:0.8s;
-webkit-animation-iteration-count:infinite;
-webkit-animation-direction:linear;
-webkit-transform:scale(0.7);
-ms-animation-name:bounceG;
-ms-animation-duration:0.8s;
-ms-animation-iteration-count:infinite;
-ms-animation-direction:linear;
-ms-transform:scale(0.7);
-o-animation-name:bounceG;
-o-animation-duration:0.8s;
-o-animation-iteration-count:infinite;
-o-animation-direction:linear;
-o-transform:scale(0.7);
animation-name:bounceG;
animation-duration:0.8s;
animation-iteration-count:infinite;
animation-direction:linear;
transform:scale(0.7);
}

#blockG_1{
-moz-animation-delay:0.24000000000000005s;
-webkit-animation-delay:0.24000000000000005s;
-ms-animation-delay:0.24000000000000005s;
-o-animation-delay:0.24000000000000005s;
animation-delay:0.24000000000000005s;
}

#blockG_2{
-moz-animation-delay:0.32s;
-webkit-animation-delay:0.32s;
-ms-animation-delay:0.32s;
-o-animation-delay:0.32s;
animation-delay:0.32s;
}

#blockG_3{
-moz-animation-delay:0.4s;
-webkit-animation-delay:0.4s;
-ms-animation-delay:0.4s;
-o-animation-delay:0.4s;
animation-delay:0.4s;
}

@-moz-keyframes bounceG{
0%{
-moz-transform:scale(1.2);
opacity:1}

100%{
-moz-transform:scale(0.7);
opacity:0.1}

}

@-webkit-keyframes bounceG{
0%{
-webkit-transform:scale(1.2);
opacity:1}

100%{
-webkit-transform:scale(0.7);
opacity:0.1}

}

@-ms-keyframes bounceG{
0%{
-ms-transform:scale(1.2);
opacity:1}

100%{
-ms-transform:scale(0.7);
opacity:0.1}

}

@-o-keyframes bounceG{
0%{
-o-transform:scale(1.2);
opacity:1}

100%{
-o-transform:scale(0.7);
opacity:0.1}

}

@keyframes bounceG{
0%{
transform:scale(1.2);
opacity:1}

100%{
transform:scale(0.7);
opacity:0.1}

}

